# training

./: .gitignore  .travis.yml  Dockerfile  README.md  catchup.sh  linux-armv7  run_ci.sh  tox.ini
.ci/: run.sh
.github/workflows/: training.yml
ci/automation/jenkinslib/vars/: conanBuildOrderHasSteps.groovy  conanFromUpstream.groovy  conanHasSourceChanged.groovy  conanLockfilesNeedRebase.groovy  conanProductPipeline.groovy  conanRebaseLockfile.groovy
ci/automation/scripts/: combined_build_order_has_steps.py  conan_create_and_update_all_lockfiles.py  conan_install_lockfile.py  copy_lockfiles_containing_package.py  create_combined_build_order.py  find_source_branch.py  has_source_changed.py  list_lockfile_names.py  lockfiles_need_rebase.py  promote_dev_lockfiles_to_prod.py
ci/bootstrap/: bootstrap.sh
ci/commands/: ci_commands_bootstrap.sh  ci_commands_env_setup.sh  ci_commands_exercises.sh  cicd_commands_env_setup.sh
ci/data/: .dockerignore
ci/data/app1/: README.md
ci/data/app2/: README.md
ci/data/app2/src/: main.cpp
ci/data/liba/: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
ci/data/liba/include/liba/: liba.h
ci/data/liba/src/: liba.cpp
ci/data/libb/: README.md  conanfile.py
ci/data/libc/src/: libc.cpp
ci/data/libd/: Jenkinsfile
ci/data/settings/: remotes.txt
ci/data/settings/profiles/: debug-gcc6  debug-gcc8  linux_gcc_7_x86_64  linux_gcc_8_armv7hf  linux_gcc_8_x86_64  release-gcc6  release-gcc7-app1  release-gcc8
ci/data/settings/toolchains/: toolchain_linux_gcc7.cmake  toolchain_linux_gcc8.cmake
cicd/automation/jenkinslib/: .gitignore  build.gradle  settings.gradle
cicd/automation/jenkinslib/src/: training.gdsl
cicd/automation/jenkinslib/vars/: conanConfigInstall.groovy  conanCreate.groovy  conanCreateAndUpload.groovy  conanCreateAndUploadFromLockfiles.groovy  conanGraphLock.groovy  conanPackagePipeline.groovy  conanPromotionPipeline.groovy  conanRemotesAdd.groovy  (+15 more)
cicd/automation/scripts/: calculate_lock_branch_name.py  choose_rev_path_of_ancestor.py  combine_build_order.py  conan_create_and_update_all_lockfiles.py  conan_install_all_lockfiles.py  conan_install_build_and_update_all_lockfiles.py  consolidate_lockfiles.py  copy_dev_lockfiles_to_prod.py  copy_direct_upstream_lockfiles.py  copy_lockfiles_containing_package.py  create_combined_build_order.py  create_package_id_map.py  find_source_branch.py  get_next_node.py  get_root_path.py  list_build_order_levels.py  list_lockfile_names.py  list_next_build_order_level.py  list_product_lockfiles_in_dev.py  remove_lockfiles_dir.py  reset_workspace_and_cache.py
cicd/bootstrap/: bootstrap.sh  bootstrap_git_repos.sh
cicd/ci_scripts/: combine_build_order.py  copy_direct_upstream_lockfiles.py  copy_lockfiles_containing_package.py  copy_upstream_lockfiles.py  find_lockfiles_containing_package.py  get_final_nodes.py  list_upstream_packages.py  package_pipeline_build.sh  package_pipeline_init.sh
cicd/commands/: cicd_commands_bootstrap.sh
cicd/data/app1/: CMakeLists.txt  Jenkinsfile  LICENSE  conanfile.py
cicd/data/app1/src/: main.cpp
cicd/data/app2/: CMakeLists.txt  Jenkinsfile  conanfile.py
cicd/data/liba/: Jenkinsfile  conanfile.py
cicd/data/libb/: CMakeLists.txt  Jenkinsfile  conanfile.py
cicd/data/libb/include/libb/: libb.h
cicd/data/libb/src/: libb.cpp
cicd/data/libc/: CMakeLists.txt  Jenkinsfile  conanfile.py
cicd/data/libc/src/: libc.cpp
cicd/data/libd/: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
cicd/data/libd/src/: libd.cpp
cicd/data/lockfiles/: README.md
cicd/data/settings/: conan.conf  remotes.txt
consumer/: CMakeLists.txt  conanfile.txt  timer.cpp
consumer_cmake_find/: CMakeLists.txt  conanfile.txt  timer.cpp
consumer_gcc/: .gitignore  conanfile.txt
create_options/: conanfile.py
create_options/src/: CMakeLists.txt  hello.cpp
create_sources/: README.md  conanfile.py
create_sources_scm/: conanfile.py
cross_build/: CMakeLists.txt  conanfile.py  example.c  rpi_armv7
cross_build/src/: hello.cpp
cross_build/test_package/: conanfile.py
docker_environment/: .ci.env  .cicd.env  .creds.env  .env  Dockerfile  docker-compose-ci.yml  docker-compose.yml
docker_environment/artifactory-training/: Dockerfile
docker_environment/artifactory-training/scripts/: bootstrap-artifactory-config.sh  set-internal-hostname.sh  wait-for-artifactory.sh
docker_environment/conan-training/: Dockerfile
docker_environment/gitbucket-training/: Dockerfile
docker_environment/jenkins-training/: Dockerfile
docker_environment/jenkins-training/configs/: jenkins.yaml
gtest/consumer/: conanfile.txt
gtest/hello/: conanfile.py  hello.cpp
gtest/package/: CMakeLists.txt  conanfile.py
gtest_build_requires/: .gitignore
gtest_build_requires/consumer/: conanfile.txt  test_profile.txt
gtest_build_requires/package/: CMakeLists.txt  conanfile.py  hello.h  test.cpp
hooks/: README  conan.conf
hooks/hooks/: check_name.py
hooks/profiles/: arm_gcc_debug.profile
jenkins/: Jenkinsfile
lockfiles/chat/: conanfile.py
lockfiles/hello/src/: hello.cpp
myconfig/hooks/: check_name.py
myconfig/profiles/: rpi_armv7
package_id/: .gitignore
package_id/app/: conanfile.py
package_id/app/src/: CMakeLists.txt  app.cpp
package_id/chat/: conanfile.py
package_id/chat/src/: CMakeLists.txt  chat.cpp
package_id/hello/: conanfile.py
package_id/hello/src/: hello.h
pico_json/: .gitignore  example.cpp
profile_arm/: arm_gcc_debug.profile  example.c
python_requires/consumer/: conanfile.py
python_requires/mytools/: conanfile.py
requires/: conanfile.py  rpi_armv7
requires/src/: CMakeLists.txt  hello.cpp
requires_conditional/: conanfile.py
requires_conditional/src/: CMakeLists.txt  hello.cpp
requires_conflict/: conanfile.txt
requires_conflict/lib_a/: conanfile.py
requires_conflict/lib_b/: conanfile.py
revisions/hello/: conanfile.py
running_apps/: README
scm/: conanfile.py
version_ranges/chat/: conanfile.py
version_ranges/hello1/: conanfile.py
version_ranges/hello2/: conanfile.py
version_ranges/hello2/src/: hello.cpp
(+131 files in other folders)
